--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -8,9 +8,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.1.2",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.13",
+    "vite": "^2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
