--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^18.2.0",
-    "react-github-calender": "^1.1.0",
+    "react-github-calendar": "^4.0.0",
     "react-loader-spinner": "^5.1.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
