--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.2",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
